added readme and code changes

--- a/task2/scss/modules/_buttons.scss
+++ b/task2/scss/modules/_buttons.scss
@@ -6,17 +6,17 @@
 	line-height:5px;
 
 	cursor:pointer;
-}
-	.button--signUp{
+	
+	&--signUp{
 		background: $signUp-button-color2; 
 	    background: linear-gradient($signUp-button-color1, $signUp-button-color2);
-		
 		font-family:$signUp-button-font;
 		color:$signUp-button-font-color;
 		border:1px solid $signUp-button-border-color;
 	}
-	.button--signUp:hover{
+	&--signUp:hover{
 		background: $signUp-button-hover-color2; 
 	    background: linear-gradient($signUp-button-hover-color1, $signUp-button-hover-color2);
 		border:1px solid $signUp-button-hover-border-color;
 	}
+}
