--- a/task2/scss/modules/_components.scss
+++ b/task2/scss/modules/_components.scss
@@ -3,13 +3,11 @@
 	margin:0 auto;
 	width:40px;
 	
-}
 	@media (min-width:575px){
-		.logo{
-			display: block;
-			width: 70px;
-		}
+		display: block;
+		width: 70px;
 	}
+}
 
 
 .rectangularBox{
@@ -21,30 +19,24 @@
 	border:1px solid $box-border-color;
 	background-color:$box-color;
 	padding-bottom:50px;
-}
+
 	@media (min-width:992px){
-		.rectangularBox{
-			margin-top: -60px;
-			height:770px;
-		}
+		margin-top: -60px;
+		height:770px;
 	}
 	@media (min-width:1140px){
-		.rectangularBox{
-			height:680px;
-		}
+		height:680px;
 	}
 	@media (min-width:1300px){
-		.rectangularBox{
-			height:630px;
-		}
+		height:630px;
 	}
+}
 
 .article{
 	display:block;
 	margin:30px;
 	margin-top:30px;
-}
-	.article__title{
+	&__title{
 		line-height: $article-title-line-height;
 		font-family: $article-title-font;
 		font-size:$article-title-font-size;
@@ -52,46 +44,47 @@
 		margin-bottom: 10px;
 	}
 	
-	.article__text{
+	&__text{
 		font-family: $article-text-font;
 		font-size:$article-text-font-size;
 		color:$article-text-font-color;
 	}
+}
 
 .signUpForm{
 	margin:20px;
 	margin-bottom:-30px;
-}
-	.signUpForm__title{
+
+	&__title{
 		margin: 30px 10px 20px 10px;
 		font-family:$form-title-font;
 		font-size:$form-title-font-size;
 		color:$form-title-color;
 	}
-	.signUpForm__description{
+	&__description{
 		display: block;
 		margin:0 10px;
 		font-family:$form-description-font;
 		font-size:$form-description-font-size;
 		color:$form-description-color;
 	}
-	.signUpForm__feedback{
+	&__feedback{
 		margin:0 10px;
 		font-family:$form-feedback-font;
 		font-size:$form-feedback-font-size;
 		transition:all 1s ease-in-out;
 		opacity: 0;
 	}
-	.signUpForm__feedback--wrong{
+	&__feedback--wrong{
 		color:$form-feedback-wrong-color;
 		opacity: 1;
 	}
-	.signUpForm__feedback--right{
+	&__feedback--right{
 		color:$form-feedback-right-color;
 		opacity: 1;
 	}
 
-	.signUpForm__input{
+	&__input{
 		width:100%;
 		height: 40px;
 		margin-top:17px;
@@ -100,8 +93,8 @@
 		font-size:$form-input-font-size;
 		color:$form-input-color;
 	}
-	.signUpForm__buttonArea{
+	&__buttonArea{
 		margin:22px auto;
 		text-align: center;
 	}
-
+}
